# libvformat

./: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  config.h.in  configure  configure.ac  mkinstalldirs  vf_iface.h
common/: types.h
debian/: .git-dpm  changelog  clean  control  copyright  gbp.conf  libvformat-dev.info  libvformat-dev.install  libvformat0.install  libvformat0.shlibs  libvformat0.symbols  not-installed  rules  watch
debian/patches/: 0001-Copy-common-types.h-to-vformat-vf_iface.h.patch  0002-Ease-distribution-of-libvformat.patch  0003-Add-sample-files.patch  0004-Provide-info-documentation.patch  0005-Add-manpages.patch  0006-Remove-leading-space-when-unfolding.patch  0007-Cast-NULL-in-void-in-functions-using-va_arg.patch  0008-Fix-typo-in-manpage-and-source.patch  0009-Fix-errors-returned-by-Werror-format-security.patch  0010-Fix-typos-in-man-pages.patch  auto-gitignore  series
debian/upstream/: metadata
doc/: Makefile.am  Makefile.in
src/: vf_access.c  vf_access_calendar.c  vf_access_wrappers.c  vf_config.h  vf_create_object.c  vf_delete.c  vf_internals.h  vf_malloc.c  vf_malloc.h  vf_malloc_stdlib.c  vf_malloc_stdlib.h  vf_modified.c  vf_modified.h  vf_parser.c  vf_reader.c  vf_search.c  vf_string_arrays.c  vf_string_arrays.h  vf_strings.c  vf_strings.h  vf_writer.c
test/: Makefile.am  Makefile.in  testsuppt.c  testsuppt.h  vformat.c
test/tests/access/: access_1.vcf
test/tests/adhoc/: group_1.vcf  group_2.vcf  group_3.vcf  group_4.vcf  group_5.vcf  group_6.vcf  group_7.vcf  mail_list_1.vcf  (+27 more)
vformat/: vf_iface.h
(+33 files in other folders)
